# E-shop

./: .env.sample  .gitignore  README.md  groups.json  pyproject.toml
article/: admin.py  forms.py  models.py  urls.py  views.py
article/functions/: utils.py
article/migrations/: 0001_initial.py  0002_alter_article_created_at_alter_article_slug.py  0003_alter_article_created_at.py  0003_alter_article_created_at_tag.py  0004_alter_article_created_at.py  0004_alter_article_created_at_alter_article_name.py  0005_alter_article_created_at.py  0006_alter_article_created_at.py  0007_alter_article_created_at.py  0008_alter_article_created_at.py  0009_alter_article_created_at.py  0010_alter_article_created_at.py  0011_alter_article_created_at.py  0012_alter_article_created_at.py  0013_alter_article_created_at.py  0014_alter_article_created_at.py  0015_alter_article_created_at.py  0016_alter_article_created_at.py  0017_alter_article_created_at.py  0018_alter_article_created_at.py  0019_alter_article_created_at.py  0020_alter_article_name.py
article/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_contact_time.py  (+16 more)
config/: settings.py  urls.py
d_users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
data/: alldata.json  catalog_data_categories.json  catalog_data_contacts.json  catalog_data_products.json  dogs.json  groups.json
dogs/: admin.py  forms.py  models.py  urls.py  views.py
users/: forms.py  models.py  services.py  urls.py  views.py
(+56 files in other folders)
