[tool.poetry]
name = "e-shop"
version = "0.1.0"
description = ""
authors = ["Эдуард Кусков <shadowfish@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
psycopg2 = "^2.9.9"
ipython = "^8.24.0"
pillow = "^10.3.0"
pytils = "^0.4.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
